Changes in yml and controller.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
   application:
     name: API-GATEWAY
 
+  main:
+    #allow-bean-definition-overriding: true
+    web-application-type: reactive
+
   cloud:
     gateway:
       routes:
